--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
-spring.datasource.url=jdbc:sqlserver://10.15.198.241;databaseName=1000FrontendV1
-spring.datasource.username=angularConnection
-spring.datasource.password=v/??k-F7psNWC^!F*RV9
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=bupa1000
+spring.datasource.username=sa
+spring.datasource.password=bupa1000
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2017Dialect
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.hibernate.ddl-auto = create-drop
-
+spring.jpa.hibernate.ddl-auto = update
 
 
 server.port=8080
